# agentic-smars

./: .gitignore  AGENT_PRIMER.md  CLAUDE.md  LICENSE  META_PRIMER.md  README.md  SMARS_ATOMS_REFERENCE.md  symbolic-agency-validation.md  task-execution-with-symbolic-agency.md  test-grammar.smars.md  test-role.smars.md
.smars/: README.md  integrate.sh  smars-cli.py
archive/: early-code-review.md  expanded-smars.md  workflow.md
cues/: agent-communication-protocols.cues.md  auditor-reintroduction.cues.md  avoid_symbolic_namespace_leakage.md  (+12 more)
notes/: FAQ.md  (+20 more)
smars-agent/: Cargo.toml  README.md  baseline-coverage-report.json  test-role-architect.smars.md
smars-agent/examples/: agent-demo.smars.md  client_test.rs  discover.rs  test-plan.smars.md
smars-agent/src/: agent_coordinator.rs  agent_demo.rs  coverage_analyzer.rs  executor.rs  lib.rs  main.rs  parser.rs  plan_library.rs  planning_engine.rs  runtime_loop.rs  server.rs  trace_logger.rs  user_interface.rs
smars-agent/src/bridge/: foundation_bridge.rs  mod.rs
smars-agent/swift-agent/: main.swift
smars-agent/test-plans/: example-plan.smars.md
smars-agent/tests/fixtures/: valid_role_directive.smars.md
standalone-agent/: Cargo.toml  FAQ.md  IMPROVEMENTS.md  PLAN_LIBRARY_INTEGRATION.md  README.md  build_library.sh  build_plan_library.rs  test_build.sh
standalone-agent/plan_library/: plan_library.json
standalone-agent/specs/: core-patterns.smars.md  runtime-loop.smars.md
standalone-agent/src/: agent_coordinator.rs  main.rs  plan_library.rs  planning_engine.rs  smars_integration.rs  user_interface.rs
(+270 files in other folders)
