[package]
name = "smars-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.0"
nom = "7.1"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
pulldown-cmark = "0.9"
