[package]
name = "smars-standalone-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "build_plan_library"
path = "build_plan_library.rs"